# ntu-dsai-m2-capstone

./: .dockerignore  .env.centralized  .env.example  .gitignore  CENTRALIZED_CONFIG_USAGE.md  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  critques.md  dagster.yaml  dagster_config_examples.yaml  dagster_config_fixed.yaml  issues.md  limitations.md  pyproject.toml  requirements.txt  test_dagster_assets.py
.dagster/storage/history/: runs.db
.dagster/storage/schedules/: schedules.db
.github/workflows/: dagster-docker.yml
dagster_pipeline/: __init__.py  repository.py
dagster_pipeline/assets/: __init__.py  meltano_integration.py  sec_download.py
dagster_pipeline/jobs/: sec_pipeline.py
dagster_pipeline/schedules/: __init__.py  sec_schedules.py
data/2025q3/: DERIV_HOLDING.tsv  SUBMISSION.tsv
data/2025q4/: DERIV_HOLDING.tsv  DERIV_TRANS.tsv  NONDERIV_HOLDING.tsv  OWNER_SIGNATURE.tsv
data/sec/2025q1/: DERIV_HOLDING.csv  DERIV_HOLDING.tsv  NONDERIV_HOLDING.csv  (+1 more)
dataprocessing/dagster_orchestration/: __main__.py  repository.py
dataprocessing/dbt_insider_transactions/: .user.yml  README.md  SUCCESS_SUMMARY.md  dbt_project.yml  profiles.yml
dataprocessing/meltano_ingestion/: .gitignore  meltano.yml  run_load_sec_insider.sh  run_load_sec_tickers.sh  run_load_sp500_companies.sh  run_load_sp500_stock_daily.sh
deployment/gcp/: .env.docker.example  README.md  cloudrun-service.example.yaml  docker-compose.yml  docker-entrypoint.sh  render_dagster_yaml.py  workspace.yaml
docs/: BVP_insider_alpha.md  InsiderAlpha.pptx  dagster_integration_guide.md  dashboard_setup.md  datasets.md  dbt.md  elt_assets.md  elt_assets_execution_order.md  ingestion.md  meltano_ingestion_guide.md  meltano_sec_ingestion_guide.md  orchestration.md  sec-insider-trading.md  setup.md  stock-analytics.md
meltano-ingestion/: .gitignore  meltano.yml  run_load_sec_insider.sh  run_load_sec_tickers.sh
notebooks/: TA_yfinance.ipynb  alphavantage.ipynb  e_yahoofinance_api_dataextraction.ipynb  finnhub_downloader.ipynb  notebook.ipynb  sec-insider-transaction.ipynb
scripts/: delete_sec_raw_bigquery_by_filing_year.py  download_sec.py  download_sec_company_tickers.py  download_sec_form4_daily.py  download_sec_form4_monthly.py  download_sec_to_bigquery.py  download_sec_to_bucket.py  download_sync_sp500_companies.py  fetch_sp500_stock_daily_yfinance_to_jsonl.py  get_stock_data_yfinance.py  sync_sec_company_tickers.py  sync_sec_from_gcs.py  ta_sma_macd.py
visualisation/: .dockerignore  Dockerfile  README.md  start.sh
visualisation/backend/: main.py  pyproject.toml  requirements.txt  test_bq.py
visualisation/backend/api/: endpoints.py
visualisation/backend/core/: bigquery.py  bq.py  cache.py  config.py
visualisation/docs/: deploy_gcp.md  insider_clusters.md
visualisation/frontend/: README.md  next.config.ts  package-lock.json  package.json
(+99 files in other folders)
