[project]
name = "insider-alpha-dashboard-api"
version = "0.1.0"
description = "FastAPI backend for the Insider Alpha dashboard (BigQuery)"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "google-cloud-bigquery>=3.25.0",
    "cachetools>=5.5.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "db-dtypes>=1.3.0",
]

[tool.uv]
package = false
